skills and word fix

--- a/index.html
+++ b/index.html
@@ -44,6 +44,52 @@
         </nav>
       </section>
 
+      <section class="section" aria-label="Skills" data-no-fish>
+        <h2 class="section-title">Skills</h2>
+        <div class="skills" role="list">
+          <div class="skill" role="listitem" tabindex="0" data-full="Python" data-icon="assets/skills/python.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">Python</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="C++" data-icon="assets/skills/cpp.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">C++</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="Go" data-icon="assets/skills/go.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">Go</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="Node.js" data-icon="assets/skills/node.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">Node.js</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="React" data-icon="assets/skills/react.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">React</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="Flask" data-icon="assets/skills/flask.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">Flask</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="PostgreSQL" data-icon="assets/skills/postgres.svg">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">PostgreSQL</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="Amazon Web Services" data-icon="assets/skills/aws.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">Amazon Web Services</span>
+          </div>
+        </div>
+      </section>
+
       <section class="section" id="projects" aria-label="Projects">
         <h2 class="section-title">Projects</h2>
 
