--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           I’m an undergraduate at Princeton studying Computer Science.
         </p>
         <p>
-          I am currently working on camera simulation and Infinigen-generated data to evaluate image sensors and vision
-          models at the Vision &amp; Learning Lab (PVL). I have experience in full stack development, machine learning,
-          robotics, and cloud infrastructure.
+          I am currently working on camera simulation and Infinigen generated data to evaluate image sensors and vision models at the
+          <a data-no-fish href="https://pvl.cs.princeton.edu/" target="_blank" rel="noreferrer">Vision &amp; Learning Lab</a>
+          . I have experience in full stack development, machine learning, robotics, and cloud infrastructure.
         </p>
       </section>
 
@@ -44,7 +44,7 @@
         </nav>
       </section>
 
-      <section class="section" aria-label="Skills" data-no-fish>
+      <section class="section" aria-label="Skills">
         <h2 class="section-title">Skills</h2>
         <div class="skills" role="list">
           <div class="skill" role="listitem" tabindex="0" data-full="Python" data-icon="assets/skills/python.png">
