name gradient and link fishyness

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
 
       <section class="about" aria-label="About">
         <p>
-          I’m an undergraduate at Princeton studying Computer Science.
-        </p>
-        <p>
           I am currently working on camera simulation and Infinigen generated data to evaluate image sensors and vision models at the
-          <a data-no-fish href="https://pvl.cs.princeton.edu/" target="_blank" rel="noreferrer">Vision &amp; Learning Lab</a>
+          <a href="https://pvl.cs.princeton.edu/" target="_blank" rel="noreferrer">Vision &amp; Learning Lab</a>
           . I have experience in full stack development, machine learning, robotics, and cloud infrastructure.
         </p>
       </section>
@@ -39,8 +36,8 @@
       <section class="section" aria-label="On the web">
         <h2 class="section-title">On the web</h2>
         <nav class="web-links">
-          <a data-no-fish href="https://github.com/arkbunyan" target="_blank" rel="noreferrer">GitHub</a>
-          <a data-no-fish href="https://www.linkedin.com/in/arkbunyan" target="_blank" rel="noreferrer">LinkedIn</a>
+          <a href="https://github.com/arkbunyan" target="_blank" rel="noreferrer">GitHub</a>
+          <a href="https://www.linkedin.com/in/arkbunyan" target="_blank" rel="noreferrer">LinkedIn</a>
         </nav>
       </section>
 
