sizing fix and add java/C

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
             <span class="skill-text" aria-hidden="true"></span>
             <span class="sr-only">C++</span>
           </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="C" data-icon="assets/skills/c.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">C</span>
+          </div>
+          <div class="skill" role="listitem" tabindex="0" data-full="Java" data-icon="assets/skills/java.png">
+            <span class="skill-icon" aria-hidden="true"></span>
+            <span class="skill-text" aria-hidden="true"></span>
+            <span class="sr-only">Java</span>
+          </div>
           <div class="skill" role="listitem" tabindex="0" data-full="Go" data-icon="assets/skills/go.png">
             <span class="skill-icon" aria-hidden="true"></span>
             <span class="skill-text" aria-hidden="true"></span>
