--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="skill" role="listitem" tabindex="0" data-full="Amazon Web Services" data-icon="assets/skills/aws.png">
             <span class="skill-icon" aria-hidden="true"></span>
             <span class="skill-text" aria-hidden="true"></span>
-            <span class="sr-only">Amazon Web Services</span>
+            <span class="sr-only">AWS</span>
           </div>
         </div>
       </section>
