--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <span class="skill-text" aria-hidden="true"></span>
             <span class="sr-only">PostgreSQL</span>
           </div>
-          <div class="skill" role="listitem" tabindex="0" data-full="Amazon Web Services" data-icon="assets/skills/aws.png">
+          <div class="skill" role="listitem" tabindex="0" data-full="AWS" data-icon="assets/skills/aws.png">
             <span class="skill-icon" aria-hidden="true"></span>
             <span class="skill-text" aria-hidden="true"></span>
-            <span class="sr-only">AWS</span>
+            <span class="sr-only">Amazon Web Services</span>
           </div>
         </div>
       </section>
