--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <img src="assets/arkinsauce.png" alt="Arkinsauce screenshot" width="2048" height="1118" />
             </a>
             <h3 class="project-title">
-              <a href="https://arkinsauce.com/" target="_blank" rel="noreferrer">Arkinsauce</a>
+              <a href="https://arkinsauce.com/" target="_blank" rel="noreferrer">Fourdle</a>
             </h3>
             <p class="project-desc">A fast word game site built for quick rounds and streaks</p>
           </article>
