project image zoom

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <span class="skill-text" aria-hidden="true"></span>
             <span class="sr-only">Flask</span>
           </div>
-          <div class="skill" role="listitem" tabindex="0" data-full="PostgreSQL" data-icon="assets/skills/postgres.svg">
+          <div class="skill" role="listitem" tabindex="0" data-full="PostgreSQL" data-icon="assets/skills/postgres.png">
             <span class="skill-icon" aria-hidden="true"></span>
             <span class="skill-text" aria-hidden="true"></span>
             <span class="sr-only">PostgreSQL</span>
