--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <main class="page">
       <header class="header">
         <h1 class="name" data-split="chars">Ark Bunyan</h1>
-        <p class="tagline">Computer Science @ Princeton</p>
+        <div class="header-controls">
+          <p class="tagline">Computer Science @ Princeton</p>
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">🌙</button>
+        </div>
       </header>
 
       <section class="about" aria-label="About">
